internal/config/testdata/syntaxerror/rotor.config.ts
import { defineConfig } from "rotor/config";

export default defineConfig({
	assets: {
